--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <p><span>Długość trasy:</span> </p>
                             <p><span>Nazwa szlaku:</span> </p>
                             <p><span>Rodzaj wypadu:</span> </p>
-                            <button class="btn btn-secondary">biore udział</button>
+                            <a href="./zapisy.html"><button class="btn btn-secondary">biore udział</button></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4" data-aos="flip-left" data-aos-delay="300">
