--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                 <div class="price-wrap row text-center justify-content-center">
                     <div class="col-md-6 col-xl-4" data-aos="flip-left" data-aos-delay="100">
                         <div class="price-box">
-                            <h3>miejsce</h3>
+                            <h3>rajd liczyrzepy</h3>
                             <hr>
-                            <p><span>Data:</span> </p>
-                            <p><span>Długość trasy:</span> </p>
-                            <p><span>Nazwa szlaku:</span> </p>
-                            <p><span>Rodzaj wypadu:</span> </p>
+                            <p><span>Data: 10.03.2023 - 12.03.2023</span> </p>
+                            <p><span>Długość trasy: 120km</span> </p>
+                            <p><span>Nazwa szlaku: Milicz</span> </p>
+                            <p><span>Rodzaj wypadu: Rajd na orientacje</span> </p>
                             <a href="./zapisy.html"><button class="btn btn-secondary">biore udział</button></a>
                         </div>
                     </div>
